[package]
name = "rust-minikeyvalue"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.7.1"
clap = { version = "4.5.17", features = ["derive"] }
db-key = "0.1.0"
env_logger = "0.11.5"
gxhash = "3.4.1"
leveldb = "0.8.6"
log = "0.4.22"
md5 = "0.7.0"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
